[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/cells/bad_molecule.png" type="Texture" id=1]
[ext_resource path="res://BadMolecule.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 0.0

[node name="BadMolecule" type="KinematicBody2D"]
position = Vector2( 69, 59 )
scale = Vector2( 1.4, 1.4 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="BadMoleculeImage" type="Sprite" parent="."]
position = Vector2( -2, 3 )
scale = Vector2( 0.0529247, 0.0529247 )
texture = ExtResource( 1 )

[node name="BadMoleculeCollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -2.5, 2.14286 )
polygon = PoolVector2Array( -11.7857, -3.8147e-06, -11.0714, -5.71429, -8.21429, -8.57143, -3.21429, -10.7143, 1.78571, -10.7143, 6.78572, -10, 11.0714, -6.42858, 12.5, -0.714287, 11.7857, 4.28571, 9.64286, 8.57143, 5.35714, 10, -3.21429, 10, -8.21429, 8.57143, -11.0714, 5.71429 )

[node name="Area2D" type="Area2D" parent="."]

[node name="ClickCollisionShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 2 )
rotation = -0.440593
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
